test/expected/explain_a_nua_iw4.out
explain [[no_unique_address]] int x : 4
        ^
9: error: [[no_unique_address]] built-in types can not have bit-field widths
